--- a/src/global.pcss
+++ b/src/global.pcss
@@ -11,3 +11,17 @@ html,
 body {
   @apply bg-dark text-primary;
 }
+
+/* Hide input[type=number] arrows */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Hide input[type=number] arrows */
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
